--- a/src/index.css
+++ b/src/index.css
@@ -1009,23 +1009,70 @@ body::after {
     @apply w-full overflow-hidden relative;
   }
 
+  /* Global mobile touch fixes for tech skills section */
+  #tech-skills * {
+    -webkit-tap-highlight-color: transparent !important;
+    -webkit-touch-callout: none !important;
+    -webkit-user-select: none !important;
+    -moz-user-select: none !important;
+    -ms-user-select: none !important;
+    user-select: none !important;
+  }
+
+  #tech-skills *:focus {
+    outline: none !important;
+    box-shadow: none !important;
+  }
+
   .tech-slider-track {
     @apply flex gap-8 items-center;
     animation: slide-right-to-left 60s linear infinite;
     width: calc(200% + 32px); /* Double width for seamless loop */
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none; /* Disable text selection */
+    touch-action: none; /* Disable touch interactions */
+    -webkit-touch-callout: none; /* Disable iOS callout */
+  }
+
+  .tech-slider-fast {
+    animation-duration: 15s; /* Much faster animation - reduced from 25s to 15s */
   }
 
   .tech-slider-reverse {
     animation: slide-left-to-right 60s linear infinite;
   }
 
+  .tech-slider-reverse.tech-slider-fast {
+    animation-duration: 15s; /* Much faster reverse animation - same as forward */
+  }
+
   .tech-slide-item {
     @apply flex-shrink-0 cursor-pointer;
     min-width: 80px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none; /* Disable text selection */
+    -webkit-touch-callout: none; /* Disable iOS callout */
+    -webkit-tap-highlight-color: transparent; /* Remove tap highlight */
   }
 
   .tech-slide-content {
     @apply relative flex flex-col items-center justify-center p-4 rounded-xl bg-black-300/50 border border-black-200 backdrop-blur-sm hover:border-white/30 transition-all duration-300 hover:bg-black-200/80;
+    outline: none; /* Remove focus outline */
+    -webkit-tap-highlight-color: transparent; /* Remove tap highlight */
+    -webkit-touch-callout: none; /* Disable iOS callout */
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+
+  .tech-slide-content:focus {
+    outline: none; /* Ensure no focus outline */
+    box-shadow: none; /* Remove any focus shadow */
   }
 
   .tech-slide-logo {
